tests/build/cases/widget_new/error_first_token.stderr
error: expected `when` or a property declaration
 --> cases/widget_new/error_first_token.rs:6:9
  |
6 |         =
  |         ^

error: expected property path
  --> cases/widget_new/error_first_token.rs:13:13
   |
13 |             =
   |             ^
